etc/helm/ingress.yaml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "pachyderm-proxy"
  labels:
    app: "pachyderm-proxy"
    suite: "pachyderm"
spec:
  ingressClassName: nginx
  rules:
    - host: pachyderm.default.svc.cluster.local
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: pachyderm-proxy
                port:
                  name: http-port
